--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,9 @@ body{
 
 #nav-bar{
     position: fixed;
-    width: 100%;
-    top: 0;
+    top: 0 px;
     left: 0;
     background-color: #cc0000;
-    color: white;
-    font-family: 'Exo 2', sans-serif;
-    padding: 1em;
 }
 
 @media (max-width:650px) {
